...
    private var isLiked: Bool {
        get {
            likeButton.imageView?.image == UIImage.favoritesActive
        }
        set {
            likeButton.setImage(newValue ? .favoritesActive : .favoritesNoActive, for: .normal)
            likeButton.accessibilityIdentifier = newValue ? "likeActive" : "likeNoActive"
        }
    }

    // MARK: - IBOutlets

    @IBOutlet private var cellImage: UIImageView!
...
