...
    // MARK: - Lifecycle

    override func viewDidLoad() {
        super.viewDidLoad()

        webView.navigationDelegate = self
        webView.accessibilityIdentifier = "UnsplashWebView"
        setupObservers()
        presenter?.viewDidLoad()
    }

    // MARK: - Private Methods

...
